src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-dwP0.25-dhU-b-wfsBU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault column width: P0.25\ndefault window height: U\nborder on\nwant fullscreen: BU\ntabbed"
expression: snapshot
---
initial configure:
size: 283 × 680, bounds: 1231 × 680, states: []

post-map configures:
size: 283 × 680, bounds: 1231 × 680, states: [Activated]
