src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-dwP0.25-dhU-wfsAN-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\ndefault column width: P0.25\ndefault window height: U\nwant fullscreen: AN\ntabbed"
expression: snapshot
---
initial configure:
size: 291 × 688, bounds: 1239 × 688, states: []

post-map configures:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen]
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 291 × 688, bounds: 1239 × 688, states: [Activated]
